@@ -1,4 +1,4 @@
-/* $Id: tiffcp.c,v 1.37.2.5 2010-06-09 17:16:58 bfriesen Exp $ */
+/* $Id: tiffcp.c,v 1.37.2.6 2010-06-10 22:52:45 bfriesen Exp $ */
 
 /*
  * Copyright (c) 1988-1997 Sam Leffler
@@ -558,17 +558,34 @@ tiffcp(TIFF* in, TIFF* out)
 	copyFunc cf;
 	uint32 width, length;
 	struct cpTag* p;
+	uint16 input_compression, input_photometric;
 
 	CopyField(TIFFTAG_IMAGEWIDTH, width);
 	CopyField(TIFFTAG_IMAGELENGTH, length);
 	CopyField(TIFFTAG_BITSPERSAMPLE, bitspersample);
 	CopyField(TIFFTAG_SAMPLESPERPIXEL, samplesperpixel);
+
+	/*
+	  For OJPEG we need to read the subsampled YCbCr data as upsampled
+	  RGB.  Since we don't write OJPEG format, automatically convert OJPEG
+	  format to modern JPEG format.
+	*/
+#if 1
+	if (TIFFGetField(in, TIFFTAG_COMPRESSION, &input_compression)
+	    && input_compression == COMPRESSION_OJPEG) {
+		TIFFSetField(in, TIFFTAG_JPEGCOLORMODE, JPEGCOLORMODE_RGB);
+
+		if (compression == (uint16)-1)
+			compression=COMPRESSION_JPEG;
+	}
+#endif
+
 	if (compression != (uint16)-1)
 		TIFFSetField(out, TIFFTAG_COMPRESSION, compression);
 	else
 		CopyField(TIFFTAG_COMPRESSION, compression);
+	
 	if (compression == COMPRESSION_JPEG) {
-	    uint16 input_compression, input_photometric;
 
             if (TIFFGetField(in, TIFFTAG_COMPRESSION, &input_compression)
                  && input_compression == COMPRESSION_JPEG) {
@@ -594,6 +611,7 @@ tiffcp(TIFF* in, TIFF* out)
 			PHOTOMETRIC_LOGL : PHOTOMETRIC_LOGLUV);
 	else
 		CopyTag(TIFFTAG_PHOTOMETRIC, 1, TIFF_SHORT);
+
 	if (fillorder != 0)
 		TIFFSetField(out, TIFFTAG_FILLORDER, fillorder);
 	else
